fix: improve visibility

--- a/prototype/seekbar/index.html
+++ b/prototype/seekbar/index.html
@@ -11,7 +11,7 @@
     テキトーにスライダーを動かすと、再生位置を変えられることのチェック
   </div>
   <div>
-    <input type="range" name="" id="" min=0 max=1 step=0.00001>
+    <input type="range" name="" id="" min=0 max=1 step=0.00001 style="display:none">
   </div>
   <script src="index.js"></script>
 </body>
